--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
         /* 头部样式 */
         header {
-            background-color: #333;
+            background-color: #444;
             color: white;
             text-align: center;
             padding: 30px;
@@ -130,6 +130,7 @@
         <h2>联系我们</h2>
         <p>邮箱：3630946614@qq.com</p>
         <p>电话：18155667125</p>
+        <a href = 'https://cshea.mysxl.cn'>介绍页</a>
     </section>
 </body>
 
