--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF - 8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cshea公司</title>
+    <title>Cshea Company</title>
     <style>
         /* 全局样式 */
         body {
@@ -17,16 +17,19 @@
 
         /* 头部样式 */
         header {
-            background-color: #444;
+            background-color: #007BFF; /* 蓝色主题色 */
             color: white;
             text-align: center;
             padding: 30px;
             position: relative;
             animation: fadeInDown 1s;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* 添加阴影增加立体感 */
         }
 
         header h1 {
             margin: 0;
+            text-transform: uppercase; /* 将标题字母大写，增加科技感 */
+            letter-spacing: 2px; /* 增加字母间距 */
         }
 
         /* 公司简介部分样式 */
@@ -99,39 +102,44 @@
                 transform: translateY(0);
             }
         }
+
+        /* 页尾样式 */
+        footer {
+            background-color: #007BFF;
+            color: white;
+            text-align: center;
+            padding: 20px;
+            margin-top: 30px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+
+        footer p {
+            margin: 0;
+        }
     </style>
 </head>
 
 <body>
     <!-- 头部 -->
     <header>
-        <h1>Cshea公司</h1>
+        <h1>Cshea Company</h1>
     </header>
     <!-- 公司简介 -->
     <section id="about">
-        <h2>关于我们</h2>
-        <p>Cshea是一家专注于编程开发软件工具的新微公司，虽然目前暂无产品问世，但却充满着蓬勃的朝气与远大的抱负。</p>
-        <p>编程是我们构建软件工具的基石。它是一种神奇的魔法，是一种深度的思考与创造过程。我们的程序员们运用各种编程语言，从古老而经典的C语言，到现代高效的Python，再到适用于跨平台开发的Java等，精心雕琢每一行代码，打造软件工具的底层架构、用户界面以及优化算法，将复杂的业务逻辑转化为计算机能够理解和执行的指令。</p>
-        <p>我们深知软件工具的力量，它在各个领域都发挥着巨大作用。我们渴望创造出一系列的软件工具，在不同领域掀起变革的浪潮。我们的团队成员来自不同背景，因对编程开发和软件工具的热爱而走到一起。团队中有经验丰富的老程序员和充满创新思维的年轻新锐力量。我们强调合作与共享，通过头脑风暴、经验技巧分享以及创意草图展示等跨部门合作交流，从多个角度思考和完善即将开发的软件工具。</p>
-        <p>我们也面临着诸多挑战。在技术领域，编程技术更新换代速度极快，我们通过建立完善的学习机制，包括定期参加技术培训、关注行业动态和参与开源项目来应对。在市场方面，软件工具市场竞争激烈，我们采取专注细分领域，挖掘未满足的用户需求，提供个性化、专业化软件工具的策略来脱颖而出。</p>
-        <p>未来，我们计划从一些小众但需求明确的领域入手推出软件工具产品，如针对特定行业的数据分析工具。随着公司发展，我们将拓展产品线，打造完整的软件工具生态系统，开展合作，包括与大型企业技术合作和与小型创业公司资源共享，在软件工具开发的征程中不断前进。</p>
+        <h2>About Us</h2>
+        <p>Cshea is a new micro-company focused on programming and developing software tools. Although there are no products available at present, it is full of vitality and ambition.</p>
+        <p>Programming is the cornerstone of our software tools. It is a magical art, a process of deep thinking and creation. Our programmers use various programming languages, from the classic C language to modern Python and Java for cross-platform development, carefully crafting each line of code to build the underlying architecture, user interface, and optimize algorithms, transforming complex business logic into instructions that computers can understand and execute.</p>
+        <p>We understand the power of software tools and their significant role in various fields. We aim to create a series of software tools that will bring about changes in different areas. Our team members come from diverse backgrounds, united by their passion for programming and software tools. The team consists of experienced senior programmers and innovative young talents. We emphasize cooperation and sharing, through brainstorming, sharing of experiences and techniques, and showcasing creative sketches, we consider and improve the software tools from multiple perspectives.</p>
+        <p>We also face many challenges. In the technical field, programming technologies are evolving rapidly. We address this by establishing a comprehensive learning mechanism, including regular participation in technical training, following industry trends, and engaging in open-source projects. In the market, the software tools market is highly competitive. We focus on niche areas, exploring unmet user needs, and providing personalized and professional software tools to stand out.</p>
+        <p>In the future, we plan to introduce software tool products starting from some small but well-defined fields, such as data analysis tools for specific industries. As the company grows, we will expand our product line, build a complete software tool ecosystem, and engage in cooperation, including technical cooperation with large enterprises and resource sharing with small start-ups, continuously advancing in the journey of software tool development.</p>
     </section>
     <!-- 服务列表 -->
     <section id="services">
-        <h2>我们的服务（未来展望）</h2>
+        <h2>Our Services (Future Outlook)</h2>
         <ul>
-            <li>开发针对特定行业的数据分析工具等软件产品。</li>
-            <li>打造完整的软件工具生态系统，实现不同软件工具间的协作。</li>
-            <li>提供技术合作与资源共享服务。</li>
+            <li>Develop software products such as data analysis tools for specific industries.</li>
+            <li>Build a complete software tool ecosystem to enable collaboration between different software tools.</li>
+            <li>Provide technical cooperation and resource sharing services.</li>
         </ul>
     </section>
     <!-- 联系信息 -->
-    <section id="contact">
-        <h2>联系我们</h2>
-        <p>邮箱：3630946614@qq.com</p>
-        <p>电话：18155667125</p>
-        <a href = 'https://cshea.mysxl.cn'>介绍页</a>
-    </section>
-</body>
-
-</html>
