--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             margin: 0;
             padding: 0;
             background-color: #f4f4f4;
-            background-image: url('https://i.imgur.com/6y3U78T.jpg'); /* 替换为你自己的背景纹理图片或使用CSS生成的图案 */
+            background-image: url('https://create.codelab.club/thumbnail/FpTWk6b6aX3DnYlFh1E0clXCJU_T.png');
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
