--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <link rel="shortcut icon" href="youricon.png" type="image/x-png">
+    <link rel="png" href="youricon.png" type="image/x-png">
     <meta charset="UTF - 8">
     <meta name="viewport" content="1=device-width, initial-scale=1.0">
     <title>Cshea Company</title>
