--- a/index.html
+++ b/index.html
@@ -23,7 +23,49 @@
             background-repeat: no-repeat;
             background-attachment: fixed;
         }
+                   /* 创建雪花的样式 */
+         .snowflake {
+               width: 10px;
+               height: 10px;
+               background - color: white;
+               border - radius: 50%;
+               position: absolute;
+               opacity: 0.8;
+           }
 
+           /* 雪花容器的样式 */
+         .snowfall - container {
+               width: 100%;
+               height: 100vh;
+               position: relative;
+               overflow: hidden;
+           }
+
+           /* 定义雪花飘落的动画关键帧 */
+           @keyframes snowfall {
+               0% {
+                   top: -10px;
+                   opacity: 0;
+                   transform: translateX(calc(random()*100vw));
+               }
+
+               50% {
+                   opacity: 0.8;
+               }
+
+               100% {
+                   top: 110vh;
+                   opacity: 0;
+                   transform: translateX(calc(random()*100vw));
+               }
+           }
+
+           /* 创建多个雪花并应用动画 */
+           @for $i from 1 through 100 {
+             .snowflake - #{$i} {
+                   animation: snowfall #{(random(5, 15))}s linear infinite;
+               }
+           }
         /* 头部样式 */
         header {
             background: linear-gradient(135deg, #007BFF, #0056b3);
